--- a/resto.html
+++ b/resto.html
@@ -85,7 +85,7 @@
       <p>Traditional Italian dessert with coffee and mascarpone.</p>
     </div>
   </div>
-  <a href="#menu" class="btn view-menu-btn">View Full Menu</a>
+  <a href="menu.html" class="btn view-menu-btn">View Full Menu</a>
 </section>
 
 <!-- Testimonials Section -->
