--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <nav class="navbar">
     <div class="logo">Gustoso</div>
     <ul class="nav-links">
-      <li><a href="#menu">Menu</a></li>
+      <li><a href="menu.html">Menu</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#contact">Contact</a></li>
       <li><a href="#reservations">Reservations</a></li>
