--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       <li><a href="#about">About</a></li>
       <li><a href="#contact">Contact</a></li>
       <li><a href="#reservations">Reservations</a></li>
+      <div class="toggle-container">
+      </div>
     </ul>
   </nav>
 
@@ -25,6 +27,7 @@
     <h1>Gustoso</h1>
     <p>Fine Italian Dining in Mumbai</p>
     <a href="#special-dishes" class="btn">Explore Our Menu</a>
+
   </div>
 </div>
 
